<?xml version="1.0"?>
<package format="2">
    <name>gateway_msgs</name>
    <version>0.0.0</version>
    <description>Gateway messages and services</description>
    <maintainer email="initialed85@gmail.com">edwardbeech</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>std_msgs</depend>

    <build_depend>message_generation</build_depend>

    <exec_depend>message_runtime</exec_depend>
</package>